-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1064 2011-06-01 20:11:03 remko Exp $
-----------------------------------------------------------------------------------------

2011-06-01	remko
	* gmt_init.c:		Default scale in -i option should be 1, not 0.

2011-05-31	pwessel
	* grdfilter_func.c:	Added some test/debug options under DEBUG mode.
				Convolution weights were y-transposed so gave wrong results
				at/near the poles for spherical filtering.  Also, some nodes
				were duplicated in the convolution, resulting in inconsistent
				values at the S or N pole.  Added test script.
	* grdlandmask_func.c:	Did not correctly truncate nodes for GSHHS bins with no data.

2011-05-31	remko
	* psscale_func.c:	Bring frame line back when annotation is not done with -B.
	* gmt_io.h:		Consistent naming of GMT_IO_SEG_HEADER and GMT_REC_IS_SEG_HEADER.
				Consistent naming of GMT_IO_TBL_HEADER and GMT_REC_IS_TBL_HEADER.

2011-05-30	pwessel
	* gmt_stat.c:		Added functions GMT_median_weighted and GMT_mode_weighted
				based on algorithms from blockmedian/mode.  These will be
				used in grdfilter for spherical operations.

2011-05-29	pwessel
	* grdblend_func.c:	Use different temp names to avoid non-POSIX mktemp.

2011-05-28	pwessel
	* gmt_support.c:	Due to different argument order for qsort_r in BSD vs glibc
				we needed to add wasteful $ifdefs to deal with this stupidity
				as *contour crashed under non-BSD system in qsort_r.

2011-05-26	pwessel
	* gmt_map.c:		GMT_wesn_clip needed to adjust longitudes to fit the given domain.
	* grdblend_func.c:	Must carefully set region passed to GMT_grdsample.
	* grdsample_func.c:	Must handle any +-360 offsets between header and -R for geo grids.
	* spotter/grdrotater_func.c:	Incorrectly used last segment min/max and not table min/max
				to determine rotated grid extent. Do not sample outside polygon.