@@ -1,5 +1,5 @@
 #!/bin/sh
-#	$Id: filtertest.sh,v 1.1 2011-06-01 01:12:21 guru Exp $
+#	$Id: filtertest.sh,v 1.2 2011-06-01 20:31:55 guru Exp $
 # Testing grdfilter's weights at a given point for a given
 # filter diameter.  Specify which output you want (a|c|r|w).
 # Change args below to pick another filter.
@@ -29,6 +29,7 @@ lo=`gmtmath -Q $D 2 DIV 0.5 SUB =`
 hi=`gmtmath -Q $D 2 DIV 0.5 ADD =`
 # Run grdfilter as specified
 grdfilter -A${mode}${lon}/$lat -D4 -F${FILT}$D -I$INC $DATA -Gt.nc -fg
+n_conv=`cat n_conv.txt`
 if [ $lat -lt 0 ]; then	# S hemisphere view
 	plat=-90
 	range=-90/0
@@ -49,7 +50,7 @@ echo "N white" >> t.cpt	# White is NaN
 # Compute radial distances from our point
 grdmath -fg -R0/360/-90/90 -I1 $lon $lat SDIST DEG2KM = r.nc
 # Plot polar map of result
-grdimage  t.nc -JA0/$plat/7i -P -B30g10 -Ct.cpt -R0/360/$range -K -X0.75i -Y0.5i $U > $ps
+grdimage  t.nc -JA0/$plat/7i -P -B30g10 -Ct.cpt -R0/360/$range -K -X0.75i -Y0.5i "$U" > $ps
 # Plot location of our test point
 echo ${lon} $lat | psxy -R -J -O -K -Sx0.1 -W1p >> $ps
 # Draw filter boundary
@@ -58,7 +59,7 @@ grdcontour r.nc -J -O -K -C1 -L$lo/$hi -W1p -R0/360/$range >> $ps
 grdimage t.nc -JQ00/7i -B30g10:."$D km Gaussian at ($lon, $lat)":WsNe -Ct.cpt -O -K -Y7.8i -R0/360/$range --FONT_TITLE=18p >> $ps
 echo ${lon} $lat | psxy -R -J -O -K -Sx0.1 -W1p >> $ps
 grdcontour  -R0/360/$range r.nc -J -O -K -C1 -L$lo/$hi -W1p >> $ps
-psscale -Ct.cpt -D3.5i/-0.15i/6.5i/0.05ih -O -K -B$t/:$mode: >> $ps
+psscale -Ct.cpt -D3.5i/-0.15i/6.5i/0.05ih -O -K -B$t/:"${mode} [$n_conv]": >> $ps
 psxy -R -J -O -T >> $ps
 if [ $# -eq 4 ]; then
 	ps2raster $ps -Tf
